[cmake] general cmake refactor, will use our own subtrees for libraries it can't find

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,158 +1,150 @@
-cmake_minimum_required(VERSION 2.8.11)
-project(VGMTrans)
+####
+# vgmtrans
+# cmake settings
+####
+cmake_minimum_required(VERSION 3.5.0)
+project(vgmtrans)
+
+############################################
+# Compilers and platform-specific settings
+####
+
+# Libraries we have to link against
+set(LIBS)
+# We use C++14...
+set(CMAKE_CXX_STANDARD 14)
+
+# ...so check for a compiler that implements it
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND
+  CMAKE_CXX_COMPILER_VERSION VERSION_LESS 5.0)
+  message(FATAL_ERROR "GCC >= 5.0 required (we've found \
+                        ${CMAKE_CXX_COMPILER_VERSION})")
+
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND
+  CMAKE_CXX_COMPILER_VERSION VERSION_LESS 3.4)
+  message(FATAL_ERROR "Clang >= 3.4 required (we've found \
+                        ${CMAKE_CXX_COMPILER_VERSION})")
+endif()
+
+# Set platform-specific flags
+if(CMAKE_C_COMPILER_ID MATCHES "MSVC")
+  add_compile_options(/permissive-)
+  add_compile_options(/Zc:inline)
+  add_compile_options(/Zc:throwingNew)
+  add_compile_options(/volatile:iso)
+  add_compile_options("/MP")
+
+  string(APPEND CMAKE_EXE_LINKER_FLAGS "/NXCOMPAT")
+else()
+  set(CMAKE_CXX_FLAGS_DEBUG "-g -Wall -Wtype-limits \
+  -Wsign-compare -Wuninitialized")
+  set(CMAKE_CXX_FLAGS_RELEASE "-w -Os -fomit-frame-pointer")
+
+  # Stripping on OS X is problematic...
+  if(NOT APPLE)
+    string(APPEND CMAKE_CXX_FLAGS_RELEASE " -s")
+  endif()
+endif()
+
+# Enforce 'Release' unless specified
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE "Release" CACHE STRING
+      "Build type (Release/Debug)" FORCE)
+endif()
 
 if(APPLE)
-    set(CMAKE_LIBRARY_ARCHITECTURE "x86_64-apple-darwin11")
-    set(CMAKE_OSX_ARCHITECTURES "x86_64;")
-    set(CMAKE_OSX_DEPLOYMENT_TARGET "10.9")
-    set(GUI_TYPE MACOSX_BUNDLE)
-endif(APPLE)
+  set(CMAKE_OSX_ARCHITECTURES "x86_64")
+  set(CMAKE_LIBRARY_ARCHITECTURE "x86_64-apple-darwin11")
+  set(CMAKE_OSX_DEPLOYMENT_TARGET "10.9")
+  set(GUI_TYPE MACOSX_BUNDLE)
+endif()
 
 if(WIN32)
-    set(CMAKE_LIBRARY_ARCHITECTURE "x86_64-w64-mingw32")
-    set(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc -static-libstdc++")
-    set(GUI_TYPE WIN32)
-endif(WIN32)
+  set(CMAKE_LIBRARY_ARCHITECTURE "x86_64-w64-mingw32")
+  string(APPEND CMAKE_EXE_LINKER_FLAGS "-static")
+  set(GUI_TYPE WIN32)
+endif()
 
-set ( CMAKE_CXX_FLAGS "-std=c++11 -w -g3 -Wall -O0" )
+# IDE support
+set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-set(CMAKE_PREFIX_PATH
-        ${CMAKE_PREFIX_PATH}
-        "${CMAKE_SOURCE_DIR}/contrib/${CMAKE_LIBRARY_ARCHITECTURE}")
-message(STATUS "PREFIX PATH: " ${CMAKE_PREFIX_PATH})
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
+    ${CMAKE_SOURCE_DIR}/cmake)
 
-set(CMAKE_MODULE_PATH
-        ${CMAKE_MODULE_PATH}
-        ${CMAKE_SOURCE_DIR}/cmake)
+##################################
+# Dependency management
+####
 
-file(GLOB_RECURSE MAIN_FILES "${PROJECT_SOURCE_DIR}/src/main/*.cpp" "${PROJECT_SOURCE_DIR}/src/main/*.h")
-file(GLOB UI_FILES "${PROJECT_SOURCE_DIR}/src/ui/qt/*.cpp" "${PROJECT_SOURCE_DIR}/src/ui/qt/*.h")
-file(GLOB_RECURSE LIB_FILES
-        "${PROJECT_SOURCE_DIR}/lib/fluidsynth/mem_sfloader/*.c" "${PROJECT_SOURCE_DIR}/lib/fluidsynth/mem_sfloader/*.h"
-        "${PROJECT_SOURCE_DIR}/lib/tinyxml/*.cpp" "${PROJECT_SOURCE_DIR}/lib/fluidsynth/*.h"
-        "${PROJECT_SOURCE_DIR}/lib/minizip/*.c" "${PROJECT_SOURCE_DIR}/lib/minizip/*.h"
-        )
+file(GLOB_RECURSE MAIN_FILES
+  "${PROJECT_SOURCE_DIR}/src/main/*.cpp"
+  "${PROJECT_SOURCE_DIR}/src/main/*.h")
+file(GLOB UI_FILES
+  "${PROJECT_SOURCE_DIR}/src/ui/qt/*.cpp"
+  "${PROJECT_SOURCE_DIR}/src/ui/qt/*.h")
 
 set(INCLUDE_DIRS
-        ${PROJECT_SOURCE_DIR}/src/main
-        ${PROJECT_SOURCE_DIR}/src/main/formats
-        ${PROJECT_SOURCE_DIR}/src/main/loaders
-        ${PROJECT_SOURCE_DIR}/src/ui/qt
-        ${PROJECT_SOURCE_DIR}/contrib/${CMAKE_LIBRARY_ARCHITECTURE}/include
-        ${PROJECT_SOURCE_DIR}/contrib/${CMAKE_LIBRARY_ARCHITECTURE}/include/glib-2.0
-        ${PROJECT_SOURCE_DIR}/contrib/${CMAKE_LIBRARY_ARCHITECTURE}/include/fluidsynth
-        ${PROJECT_SOURCE_DIR}/lib/zlib/include
-        ${PROJECT_SOURCE_DIR}/lib/tinyxml
-        ${PROJECT_SOURCE_DIR}/lib/fluidsynth/mem_sfloader
-
-        )
-
-set(RESOURCE_PATH
-        "${PROJECT_SOURCE_DIR}/src/ui/qt/resources/resources.qrc"
-        "${PROJECT_SOURCE_DIR}/src/ui/qt/resources/qdarkstyle/style.qrc")
+  ${PROJECT_SOURCE_DIR}/src/main
+  ${PROJECT_SOURCE_DIR}/src/main/formats
+  ${PROJECT_SOURCE_DIR}/src/main/loaders
+  ${PROJECT_SOURCE_DIR}/src/ui/qt
+)
 
 source_group("ui" REGULAR_EXPRESSION .*src/ui/qt/.*)
 source_group("main\\formats" REGULAR_EXPRESSION .*src/main/formats/.*)
 source_group("main\\loaders" REGULAR_EXPRESSION .*src/main/loaders/.*)
 source_group("main" REGULAR_EXPRESSION .*src/main/.*)
-source_group("lib\\fluidsynth" REGULAR_EXPRESSION .*lib/fluidsynth/.*)
-source_group("lib\\tinyxml" REGULAR_EXPRESSION .*lib/tinyxml/.*)
-source_group("lib\\minizip" REGULAR_EXPRESSION .*lib/minizip/.*)
 
+#set(CMAKE_INCLUDE_CURRENT_DIR ON)
 include_directories(${INCLUDE_DIRS})
 
+find_package(Qt5 REQUIRED COMPONENTS Gui Widgets)
+set_property(TARGET Qt5::Core PROPERTY INTERFACE_COMPILE_FEATURES "")
+message(STATUS "Will use system Qt ${Qt5Core_VERSION}")
 
-# Find includes in corresponding build directories
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-# Instruct CMake to run moc automatically when needed.
 set(CMAKE_AUTOMOC ON)
-## We need add -DQT_WIDGETS_LIB when using QtWidgets in Qt 5.
-add_definitions(${Qt5Widgets_DEFINITIONS})
-# Find the QtWidgets library
-find_package(Qt5Widgets REQUIRED)
-
+set(RESOURCE_PATH
+  "${PROJECT_SOURCE_DIR}/src/ui/qt/resources/resources.qrc"
+  "${PROJECT_SOURCE_DIR}/src/ui/qt/resources/qdarkstyle/style.qrc"
+)
 qt5_add_resources(UI_RESOURCES ${RESOURCE_PATH})
 
-add_executable(vgmtrans ${GUI_TYPE} ${MAIN_FILES} ${UI_FILES} ${LIB_FILES} ${UI_RESOURCES})
+#find_package(ZLIB)
+if(ZLIB_FOUND)
+  message(STATUS "Will use system zlib ${ZLIB_VERSION_STRING}")
+else()
+  message(STATUS "zlib not found, using static")
+  add_subdirectory(lib/zlib)
+endif()
 
-# Use the Widgets module from Qt 5.
-target_link_libraries(vgmtrans Qt5::Core Qt5::Widgets)
+message(STATUS "Using static TinyXML")
+add_subdirectory(lib/tinyxml)
 
-if (WIN32 OR APPLE)
-    set_target_properties(vgmtrans PROPERTIES LINK_SEARCH_START_STATIC 1)
-    set_target_properties(vgmtrans PROPERTIES LINK_SEARCH_END_STATIC 1)
-endif (WIN32 OR APPLE)
-
-find_package (ZLIB REQUIRED)
-if (ZLIB_FOUND)
-    include_directories(${ZLIB_INCLUDE_DIRS})
-    target_link_libraries (vgmtrans ${ZLIB_LIBRARIES})
-endif (ZLIB_FOUND)
-
-find_package (FluidSynth REQUIRED)
-target_link_libraries(vgmtrans ${FLUIDSYNTH_LIBRARIES})
-
-find_package(GLIB REQUIRED)
-target_link_libraries(vgmtrans ${GLIB_LIBRARIES})
-
-if (WIN32 OR APPLE)
-    find_library(QTPCRE_LIBRARY qtpcre)
-    target_link_libraries(vgmtrans ${QTPCRE_LIBRARY})
-
-    find_library(INTL_LIBRARY NAMES intl)
-    target_link_libraries(vgmtrans ${INTL_LIBRARY})
-
-    find_library(ICONV_LIBRARIES NAMES iconv)
-    target_link_libraries(vgmtrans ${ICONV_LIBRARIES})
-endif (WIN32 OR APPLE)
-
-add_definitions(-DIOAPI_NO_64)
 add_definitions(-DTIXML_USE_STL)
 
-if (WIN32)
-    set_property(TARGET Qt5::Core APPEND PROPERTY INTERFACE_LINK_LIBRARIES ws2_32)
-    find_library(QWINDOWS_LIBRARY qwindows)
-    target_link_libraries(vgmtrans
-            ${QWINDOWS_LIBRARY}
+##################################
+# Targets
+####
 
-            imm32.lib
-            winmm.lib
-            dsound.lib)
+add_executable(
+  vgmtrans ${GUI_TYPE} ${MAIN_FILES} ${UI_FILES} ${UI_RESOURCES})
 
-    add_definitions(-DFLUIDSYNTH_NOT_A_DLL -DG_OS_WIN32)
+target_compile_definitions(vgmtrans
+PRIVATE
+  -DQT_USE_QSTRINGBUILDER
+)
 
-endif (WIN32)
+target_include_directories(vgmtrans
+PUBLIC
+  ${INCLUDE_DIRS}
+PRIVATE
+  ${CMAKE_CURRENT_BINARY_DIR}
+  ${Qt5Gui_PRIVATE_INCLUDE_DIRS}
+)
 
-if (APPLE)
-    find_library(IOKIT_LIBRARY IOKit)
-    find_library(APPKIT_LIBRARY AppKit)
-    find_library(CARBON_LIBRARY Carbon)
-    find_library(COREMIDI_LIBRARY CoreMIDI)
-    find_library(COREAUDIO_LIBRARY CoreAudio)
-    find_library(AUDIOUNIT_LIBRARY AudioUnit)
-    find_library(COREFOUNDATION_LIBRARY CoreFoundation)
-    find_library(CORESERVICES_LIBRARY CoreServices)
-
-    find_library(QCOCOA_LIBRARY qcocoa)
-    find_library(QT5PLATFORMSUPPORT_LIBRARY Qt5PlatformSupport)
-    find_library(QT5PRINTSUPPORT_LIBRARY Qt5PrintSupport)
-    find_library(CUPS_LIBRARY cups)
-
-    target_link_libraries(vgmtrans
-            ${QCOCOA_LIBRARY}
-            ${APPKIT_LIBRARY}
-            ${CARBON_LIBRARY}
-            ${COREMIDI_LIBRARY}
-            ${COREAUDIO_LIBRARY}
-            ${AUDIOUNIT_LIBRARY}
-            ${COREFOUNDATION_LIBRARY}
-            ${CORESERVICES_LIBRARY}
-
-            ${QT5PLATFORMSUPPORT_LIBRARY}
-            ${QT5PRINTSUPPORT_LIBRARY}
-            ${CUPS_LIBRARY}
-            ${IOKIT_LIBRARY}
-
-            )
-
-endif (APPLE)
+target_link_libraries(vgmtrans
+PRIVATE
+  Qt5::Widgets
+  minizip
+  ZLIB::ZLIB
+  tinyxml_static
+)
