--- a/lib/zlib/CMakeLists.txt
+++ b/lib/zlib/CMakeLists.txt
@@ -1,7 +1,5 @@
 project(zlib C)
 
-add_subdirectory(minizip)
-
 include(CheckTypeSize)
 include(CheckFunctionExists)
 include(CheckIncludeFile)
@@ -83,5 +81,8 @@ add_library(ZLIB::ZLIB ALIAS z)
 
 target_include_directories(z
 PUBLIC
-    ${CMAKE_CURRENT_SOURCE_DIR}
+  ${CMAKE_CURRENT_SOURCE_DIR}
 )
+
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+add_subdirectory(minizip)
