--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ matrix:
       env:
         - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
       before_install:
-        - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+        - sudo add-apt-repository --yes ppa:hedges/qt5.5
         - sudo apt-get update -qq
-        - sudo apt-get install qtbase5-dev
+        - sudo apt-get install qt55base
         # minizip unavailable on trusty
         - sudo bash -c "echo -e '\n deb http://archive.ubuntu.com/ubuntu xenial main universe' >> '/etc/apt/sources.list.d/ubuntu-xenial-main.list'"
         - sudo apt-key adv --recv-keys --keyserver keyserver.ubuntu.com 3B4FE6ACC0B21F32
@@ -29,9 +29,9 @@ matrix:
     - os: linux
       compiler: clang
       before_install:
-        - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
+        - sudo add-apt-repository --yes ppa:hedges/qt5.5
         - sudo apt-get update -qq
-        - sudo apt-get install qtbase5-dev
+        - sudo apt-get install qt55base
         - sudo bash -c "echo -e '\n deb http://archive.ubuntu.com/ubuntu xenial main universe' >> '/etc/apt/sources.list.d/ubuntu-xenial-main.list'"
         - sudo apt-key adv --recv-keys --keyserver keyserver.ubuntu.com 3B4FE6ACC0B21F32
         - sudo apt-get update -qq
