Refactoring the build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,217 +1,124 @@
-####
-# vgmtrans
-# cmake settings
-####
-cmake_minimum_required(VERSION 3.5.0)
-project(vgmtrans)
+# VGMTrans (c) 2018
+# Licensed under the zlib license
+# Check the included LICENSE.txt for details
+cmake_minimum_required(VERSION 3.5)
 
-############################################
-# Compilers and platform-specific settings
-####
-
-# We use C++14...
-set(CMAKE_CXX_STANDARD 14)
-
-# ...so check for a compiler that implements it
-if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND
-  CMAKE_CXX_COMPILER_VERSION VERSION_LESS 5.0)
-  message(FATAL_ERROR "GCC >= 5.0 required (we've found \
-                        ${CMAKE_CXX_COMPILER_VERSION})")
-
-elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND
-  CMAKE_CXX_COMPILER_VERSION VERSION_LESS 3.4)
-  message(FATAL_ERROR "Clang >= 3.4 required (we've found \
-                        ${CMAKE_CXX_COMPILER_VERSION})")
-endif()
-
-# Set platform-specific flags
-if(CMAKE_C_COMPILER_ID MATCHES "MSVC")
-  add_compile_options(/permissive-)
-  add_compile_options(/Zc:inline)
-  add_compile_options(/Zc:throwingNew)
-  add_compile_options(/Zc:strictStrings-)
-  add_compile_options(/volatile:iso)
-  add_compile_options(/MP)
-
-  add_definitions(-D_CRT_SECURE_NO_DEPRECATE)
-  add_definitions(-D_CRT_NONSTDC_NO_DEPRECATE)
-  add_definitions(-DVGMTRANS_FOR_QT)
-
-  string(APPEND CMAKE_EXE_LINKER_FLAGS " /NXCOMPAT")
-else()
-  set(CMAKE_CXX_FLAGS_DEBUG "-g -Wall -Wtype-limits \
-  -Wsign-compare -Wuninitialized")
-  set(CMAKE_CXX_FLAGS_RELEASE "-w -Os -fomit-frame-pointer")
-
-  # Stripping on OS X is problematic...
-  if(NOT APPLE)
-    string(APPEND CMAKE_CXX_FLAGS_RELEASE " -s")
-  endif()
-endif()
-
-# Enforce 'Release' unless specified
-if(NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE "Release" CACHE STRING
-      "Build type (Release/Debug)" FORCE)
-endif()
-
-if(APPLE)
-  set(CMAKE_OSX_ARCHITECTURES "x86_64")
-  set(CMAKE_LIBRARY_ARCHITECTURE "x86_64-apple-darwin11")
-  set(CMAKE_OSX_DEPLOYMENT_TARGET "10.9")
-  set(GUI_TYPE MACOSX_BUNDLE)
-endif()
-
-if(WIN32)
-  if(MSYS OR MINGW)
-    set(CMAKE_LIBRARY_ARCHITECTURE "x86_64-w64-mingw32")
-    string(APPEND CMAKE_EXE_LINKER_FLAGS "-static")
-  endif()
-  set(GUI_TYPE WIN32)
-endif()
-
-# CMake utils
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
-    ${CMAKE_SOURCE_DIR}/cmake)
-
-# IDE support
+project(VGMTrans)
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-# Set final build directory
-set(destdir ${CMAKE_SOURCE_DIR}/bin CACHE PATH "destdir")
+# Environment settings #
 
-##################################
-# Dependency management
-####
+set(CMAKE_OSX_ARCHITECTURES "x86_64")
+# Clang compilation database, needed for IWYU
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-file(GLOB_RECURSE MAIN_FILES
-  "${PROJECT_SOURCE_DIR}/src/main/*.cpp"
-  "${PROJECT_SOURCE_DIR}/src/main/*.h")
-file(GLOB UI_FILES
-  "${PROJECT_SOURCE_DIR}/src/ui/qt/*.cpp"
-  "${PROJECT_SOURCE_DIR}/src/ui/qt/*.h")
-
-set(INCLUDE_DIRS
-  ${PROJECT_SOURCE_DIR}/src/main
-  ${PROJECT_SOURCE_DIR}/src/main/formats
-  ${PROJECT_SOURCE_DIR}/src/main/loaders
-  ${PROJECT_SOURCE_DIR}/src/ui/qt
-)
-
-source_group("ui" REGULAR_EXPRESSION .*src/ui/qt/.*)
-source_group("main\\formats" REGULAR_EXPRESSION .*src/main/formats/.*)
-source_group("main\\loaders" REGULAR_EXPRESSION .*src/main/loaders/.*)
-source_group("main" REGULAR_EXPRESSION .*src/main/.*)
-
-include_directories(${INCLUDE_DIRS})
-
-if(APPLE AND EXISTS /usr/local/opt/qt5)
-  # Homebrew installs Qt5 (up to at least 5.9.1) in
-  # /usr/local/qt5, ensure it can be found by CMake since
-  # it is not in the default /usr/local prefix.
-  list(APPEND CMAKE_PREFIX_PATH "/usr/local/opt/qt5")
+set(CMAKE_CXX_STANDARD 14)
+# Make sure the compiler supports C++14
+if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND
+        CMAKE_CXX_COMPILER_VERSION VERSION_LESS 5.0)
+    message(FATAL_ERROR "GCC >= 5.0 required (found \
+                        ${CMAKE_CXX_COMPILER_VERSION})")
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND
+        CMAKE_CXX_COMPILER_VERSION VERSION_LESS 3.4)
+    message(FATAL_ERROR "Clang >= 3.4 required (found \
+                        ${CMAKE_CXX_COMPILER_VERSION})")
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC" AND
+        CMAKE_CXX_COMPILER_VERSION VERSION_LESS 19.10)
+    message(FATAL_ERROR "MSVC >= 19.10 (VS2015) required (found \
+                        ${CMAKE_CXX_COMPILER_VERSION})")
 endif()
 
-find_package(Qt5 REQUIRED COMPONENTS Gui Widgets)
-set_property(TARGET Qt5::Core PROPERTY INTERFACE_COMPILE_FEATURES "")
-message(STATUS "Using use system Qt ${Qt5Core_VERSION}")
+list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
 
-set(CMAKE_AUTOMOC ON)
-set(RESOURCE_PATH
-  "${PROJECT_SOURCE_DIR}/src/ui/qt/resources/resources.qrc"
-)
-qt5_add_resources(UI_RESOURCES ${RESOURCE_PATH})
+# Set compiler-specific flags
+if(MSVC)
+    add_compile_options(/permissive-)
+    add_compile_options(/Zc:inline)
+    add_compile_options(/Zc:throwingNew)
+    add_compile_options(/Zc:strictStrings-)
+    add_compile_options(/volatile:iso)
+    add_compile_options(/MP)
 
-find_package(ZLIB)
-find_package(MINIZIP)
-if(ZLIB_FOUND AND MINIZIP_FOUND)
-  message(STATUS "Using system zlib ${ZLIB_VERSION_STRING} and minizip")
+    add_definitions(-D_CRT_SECURE_NO_DEPRECATE)
+    add_definitions(-D_CRT_NONSTDC_NO_DEPRECATE)
+    add_definitions(-DVGMTRANS_FOR_QT) #TODO: Remove
+
+    string(APPEND CMAKE_EXE_LINKER_FLAGS " /NXCOMPAT")
 else()
-  message(STATUS "Using static zlib and minizip")
-  add_subdirectory(lib/zlib)
+    set(CMAKE_CXX_FLAGS_DEBUG "-g -Wall -Wtype-limits \
+  -Wsign-compare -Wuninitialized")
+    set(CMAKE_CXX_FLAGS_RELEASE "-w -Os -fomit-frame-pointer")
+
+    # Turns out that "-s" in Apple's clang is not really for stripping
+    if(NOT APPLE)
+        string(APPEND CMAKE_CXX_FLAGS_RELEASE " -s")
+    endif()
 endif()
 
-find_package(FLUIDSYNTH)
-if(FLUIDSYNTH_FOUND)
-  message(STATUS "Using system fluidsynth")
+# Dependencies needed for the backend #
+find_package(ZLIB) # Needed for psf decompression
+if(ZLIB_FOUND)
+    message(STATUS "Using system Zlib")
 else()
-  message(ERROR "Please install fluidsynth - static subtree not yet supported")
+    message(STATUS "Using static Zlib fallback")
+    add_subdirectory(lib/zlib)
+endif ()
+
+find_package(MINIZIP) # Needed for the MAME loader
+if(MINIZIP_FOUND)
+    message(STATUS "Using system MiniZip")
+else()
+    message(STATUS "Using static MiniZip fallback")
+    add_subdirectory(lib/zlib/minizip)
 endif()
 
-message(STATUS "Using static TinyXML")
+message(STATUS "Using static TinyXML fallback") # Needed for the MAME loader
 add_subdirectory(lib/tinyxml)
 add_definitions(-DTIXML_USE_STL)
 
-##################################
-# Targets
-####
+find_package(Qt5 REQUIRED COMPONENTS Gui Widgets)
+message(STATUS "Using Qt ${Qt5Core_VERSION}")
+
+set(CMAKE_AUTOMOC ON)
+set(RESOURCE_PATH
+        "${PROJECT_SOURCE_DIR}/src/ui/qt/resources/resources.qrc"
+        )
+qt5_add_resources(UI_RESOURCES ${RESOURCE_PATH})
+
+find_package(FLUIDSYNTH REQUIRED)
+
+# Targets #
+
+file(GLOB_RECURSE MAIN_FILES
+        "${PROJECT_SOURCE_DIR}/src/main/*.cpp"
+        "${PROJECT_SOURCE_DIR}/src/main/*.h")
+
+file(GLOB UI_FILES
+        "${PROJECT_SOURCE_DIR}/src/ui/qt/*.cpp"
+        "${PROJECT_SOURCE_DIR}/src/ui/qt/*.h")
+
+set(INCLUDE_DIRS
+        ${PROJECT_SOURCE_DIR}/src/main
+        ${PROJECT_SOURCE_DIR}/src/main/formats
+        ${PROJECT_SOURCE_DIR}/src/main/loaders
+        ${PROJECT_SOURCE_DIR}/src/ui/qt
+        )
 
 add_executable(
-  vgmtrans ${GUI_TYPE} ${MAIN_FILES} ${UI_FILES} ${UI_RESOURCES})
-
-target_compile_definitions(vgmtrans
-PRIVATE
-  -DQT_USE_QSTRINGBUILDER
-)
+        vgmtrans ${MAIN_FILES} ${UI_FILES} ${UI_RESOURCES})
 
 target_include_directories(vgmtrans
-PUBLIC
-  ${INCLUDE_DIRS}
-PRIVATE
-  ${CMAKE_CURRENT_BINARY_DIR}
-  ${Qt5Gui_PRIVATE_INCLUDE_DIRS}
-)
+        PRIVATE
+        ${INCLUDE_DIRS}
+        ${CMAKE_CURRENT_BINARY_DIR}
+        ${Qt5Gui_PRIVATE_INCLUDE_DIRS}
+        )
 
 target_link_libraries(vgmtrans
-PRIVATE
-  Qt5::Widgets
-  minizip
-  ZLIB::ZLIB
-  fluidsynth
-  tinyxml_static
+        PRIVATE
+        ZLIB::ZLIB
+        minizip
+        tinyxml
+        Qt5::Widgets
+        fluidsynth
 )
-
-# We can't know for sure if the system minizip
-# was compiled with BZip2 support
-if(MINIZIP_FOUND)
-  find_package(BZip2)
-  if(BZIP2_FOUND)
-    message(STATUS "Assuming system minizip needs Bzip2")
-    target_link_libraries(vgmtrans
-      PRIVATE
-      BZip2::BZip2
-    )
-  endif()
-endif()
-
-if(WIN32)
-target_link_libraries(vgmtrans
-PRIVATE
-  Qt5::QWindowsIntegrationPlugin
-)
-endif()
-
-# Create an application bundle for OS X
-if(APPLE)
-  include(BundleUtilities)
-  set(BUNDLE_PATH ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/VGMTrans.app)
-
-  target_link_libraries(vgmtrans
-  PRIVATE
-    Qt5::QCocoaIntegrationPlugin
-  )
-
-  set_target_properties(vgmtrans PROPERTIES
-    MACOSX_BUNDLE true
-    OUTPUT_NAME VGMTrans)
-
-  get_target_property(cocoa Qt5::QCocoaIntegrationPlugin LOCATION)
-  target_sources(vgmtrans PRIVATE "${cocoa}")
-  set_source_files_properties("${cocoa}" PROPERTIES MACOSX_PACKAGE_LOCATION MacOS/platforms)
-
-  get_target_property(macstyle Qt5::QMacStylePlugin LOCATION)
-  target_sources(vgmtrans PRIVATE "${macstyle}")
-  set_source_files_properties("${macstyle}" PROPERTIES MACOSX_PACKAGE_LOCATION MacOS/styles)
-else()
-  install(TARGETS vgmtrans RUNTIME DESTINATION ${destdir})
-endif()
