--- a/lib/tinyxml/CMakeLists.txt
+++ b/lib/tinyxml/CMakeLists.txt
@@ -13,15 +13,15 @@ add_library(tinyxml_static STATIC
             tinyxml.cpp tinyxml.h
 			tinystr.cpp tinystr.h
 			tinyxmlerror.cpp tinyxmlparser.cpp)
+add_library(tinyxml ALIAS tinyxml_static)
 
 target_include_directories(tinyxml_static
 PUBLIC
-    ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_LIST_DIR}
 )
-
 
 set_target_properties(tinyxml_static PROPERTIES
         COMPILE_DEFINITONS "TINYXML_EXPORT"
         VERSION "${GENERIC_LIB_VERSION}"
-        SOVERSION "${GENERIC_LIB_SOVERSION}")
-set_target_properties(tinyxml_static PROPERTIES OUTPUT_NAME tinyxml)
+        SOVERSION "${GENERIC_LIB_SOVERSION}"
+		OUTPUT_NAME tinyxml)
